--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
 	"tasks": {
+		"run": "deno run --allow-write src/main.ts",
 		"test": "deno test --allow-write --allow-run src/lsp_test.ts"
 	}
 }
